--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "client-sessions": "^0.8.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "scss": "^0.2.4",
     "mongoose": "^8.0.3",
-    "cookie-parser":"^1.4.6"
+    "scss": "^0.2.4",
+    "uuid": "^9.0.1"
   }
 }
