--- a/package.json
+++ b/package.json
@@ -9,24 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.7",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.9",
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.2",
     "framer-motion": "^11.0.3",
     "headlessui": "^0.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^3.7.4",
     "next": "14.1.0",
+    "nodemailer": "^6.9.9",
     "preline": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "tw-elements": "^1.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "mongoose": "^8.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
