--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "preline": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tw-elements": "^1.1.0"
